--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.95.1",
     "@tambo-ai/react": "^0.73.1",
     "clsx": "^2.1.1",
     "motion": "^12.31.0",
