--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.1",
     "@tambo-ai/react": "^0.73.1",
+    "@xyflow/react": "^12.10.0",
     "clsx": "^2.1.1",
     "motion": "^12.31.0",
     "next": "16.1.6",
